--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>सबका साथी • Black Theme Ultra Panel</title>
+<title>बाजार साथी • Black Theme Ultra Panel</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -38,7 +38,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
 <body>
 
 <div class="container">
-    <h1>सबका साथी</h1>
+    <h1>बाजार साथी</h1>
     <div class="nav-buttons">
         <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>
