--- a/retailer.html
+++ b/retailer.html
@@ -21,13 +21,13 @@ body{margin:0;background:#f3f6fb}
 .product-card{background:#fff;padding:6px;border-radius:10px;text-align:center;cursor:pointer;box-shadow:0 3px 8px rgba(0,0,0,.08)}
 .product-card img{width:100%;height:90px;object-fit:cover;border-radius:8px}
 .price{color:#16a34a;font-weight:600;font-size:13px}
-.order-card{background:#fff;padding:12px;margin-bottom:10px;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.08)}
-.badge{padding:4px 10px;border-radius:20px;font-size:12px;background:#e0f2fe;color:#075985}
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
 .modal-content{background:#fff;padding:20px;width:90%;max-width:500px;border-radius:15px;max-height:85vh;overflow:auto}
 input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #ccc}
-button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;border-radius:10px;cursor:pointer}
-.desc{font-size:14px;color:#444;margin:10px 0;line-height:1.5}
+button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-radius:10px;cursor:pointer;width:100%}
+.cart-item{border-bottom:1px solid #ddd;padding:8px 0}
+.order-card{background:#fff;padding:12px;margin-bottom:10px;border-radius:12px}
+.badge{background:#e0f2fe;padding:4px 10px;border-radius:20px;font-size:12px}
 </style>
 </head>
 
@@ -37,9 +37,9 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 <div class="icon-bar">
   <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
   <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
+  <button class="icon-btn" onclick="openCart()"><i class="bi bi-cart"></i></button>
   <button class="icon-btn" onclick="openDeliveryDetails()">
-    <i class="bi bi-truck"></i>
-    <span id="deliveryDot" class="notify-dot"></span>
+    <i class="bi bi-truck"></i><span id="deliveryDot" class="notify-dot"></span>
   </button>
 </div>
 
@@ -53,18 +53,24 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 <div class="products-grid" id="products"></div>
 </div>
 
-<!-- PRODUCT MODAL -->
+<!-- PRODUCT DETAIL -->
 <div class="modal" id="detailModal">
  <div class="modal-content">
   <h3 id="dName"></h3>
   <img id="dImg" style="width:100%;border-radius:10px">
-
-  <!-- ✅ PRODUCT DESCRIPTION -->
-  <div id="dDesc" class="desc"></div>
-
+  <p id="dDesc"></p>
   <p id="dPrice"></p>
-  <p id="dDeliveryCharge"></p>
-  <p id="dTotal"></p>
+  <button class="primary" onclick="addToCart()">➕ Add to Cart</button>
+  <button onclick="closeAll()">Close</button>
+ </div>
+</div>
+
+<!-- CART -->
+<div class="modal" id="cartModal">
+ <div class="modal-content">
+  <h3>🧺 My Cart</h3>
+  <div id="cartItems"></div>
+  <p id="cartTotal"></p>
 
   <select id="vehicleType">
     <option value="">Select Vehicle</option>
@@ -73,7 +79,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
     <option value="four_wheeler">Four Wheeler</option>
   </select>
 
-  <button class="primary" onclick="startPayment()">Pay & Order</button>
+  <button class="primary" onclick="payCart()">Pay & Order</button>
   <button onclick="closeAll()">Close</button>
  </div>
 </div>
@@ -111,130 +117,90 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
 let selectedProduct=null;
+let cart=JSON.parse(localStorage.getItem("cart")||"[]");
 
-/* LOAD PRODUCTS */
+/* PRODUCTS */
 async function loadProducts(){
  const wid=document.getElementById("wid").value.trim();
- if(!wid) return alert("Enter wholesaler ID");
- const res=await fetch(`${API}/api/products/wholesaler/${wid}`);
- const data=await res.json();
- products.innerHTML=data.products.map(p=>{
-   const safeProduct = JSON.stringify(p).replace(/'/g, "\\'");
-   return `
-    <div class="product-card" onclick='showDetail(${safeProduct})'>
-     <img src="${p.image}">
-     <div>${p.productName}</div>
-     <div class="price">₹${p.price}</div>
-    </div>`;
+ const r=await fetch(`${API}/api/products/wholesaler/${wid}`);
+ const d=await r.json();
+ products.innerHTML=d.products.map(p=>{
+  return `<div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
+   <img src="${p.image}">
+   <div>${p.productName}</div>
+   <div class="price">₹${p.price}</div>
+  </div>`;
  }).join("");
 }
 
-/* PRODUCT DETAIL */
+/* DETAIL */
 function showDetail(p){
  selectedProduct=p;
  dName.innerText=p.productName;
  dImg.src=p.image;
- dDesc.innerText = p.detail ? p.detail : "No description available for this product.";
- dPrice.innerText="Price ₹"+p.price;
- dDeliveryCharge.innerText="";
- dTotal.innerText="";
+ dDesc.innerText=p.detail||"No description";
+ dPrice.innerText="₹"+p.price;
  detailModal.style.display="flex";
 }
 
-/* PAYMENT */
-async function startPayment(){
- const vehicle=document.getElementById("vehicleType").value;
- if(!vehicle) return alert("Select vehicle");
+/* CART */
+function addToCart(){
+ cart.push(selectedProduct);
+ localStorage.setItem("cart",JSON.stringify(cart));
+ alert("Added to cart");
+ closeAll();
+}
+function openCart(){
+ let total=0;
+ cartItems.innerHTML=cart.map((c,i)=>{
+  total+=c.price;
+  return `<div class="cart-item">${c.productName} ₹${c.price}
+   <button onclick="removeCart(${i})">❌</button></div>`;
+ }).join("");
+ cartTotal.innerText="Subtotal ₹"+total;
+ cartModal.style.display="flex";
+}
+function removeCart(i){
+ cart.splice(i,1);
+ localStorage.setItem("cart",JSON.stringify(cart));
+ openCart();
+}
 
+/* PAYMENT */
+async function payCart(){
+ const vehicle=vehicleType.value;
  const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
  if(!profile.mobile||!profile.address) return alert("Save profile first");
 
- let deliveryCharge=vehicle==="two_wheeler"?1:vehicle==="three_wheeler"?50:80;
- const totalAmount=selectedProduct.price+deliveryCharge;
+ let delivery=vehicle==="two_wheeler"?1:vehicle==="three_wheeler"?50:80;
+ let amount=cart.reduce((s,i)=>s+i.price,0)+delivery;
 
- dDeliveryCharge.innerText="Delivery ₹"+deliveryCharge;
- dTotal.innerText="Total ₹"+totalAmount;
-
- const res=await fetch(API+"/api/orders/pay-and-create",{
-  method:"POST",
-  headers:{ "Content-Type":"application/json" },
-  body:JSON.stringify({amount:totalAmount})
+ const r=await fetch(API+"/api/orders/pay-and-create",{
+  method:"POST",headers:{'Content-Type':'application/json'},
+  body:JSON.stringify({amount})
  });
- const data=await res.json();
+ const d=await r.json();
 
- const rzp=new Razorpay({
-  key:data.key,
-  amount:data.amount,
-  currency:"INR",
-  order_id:data.order.id,
-  name:"ShopBacked",
-  description:"Product Order",
-  handler:async function(response){
+ new Razorpay({
+  key:d.key,amount:d.amount,currency:"INR",order_id:d.order.id,
+  handler:async resp=>{
    await fetch(API+"/api/orders/confirm-after-payment",{
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
+    method:"POST",headers:{'Content-Type':'application/json'},
     body:JSON.stringify({
-     productId:selectedProduct._id,
-     wholesalerId:selectedProduct.wholesalerId,
-     paymentId:response.razorpay_payment_id,
-     vehicleType:vehicle,
-     deliveryCharge,
-     totalAmount,
+     paymentId:resp.razorpay_payment_id,
+     products:cart,
+     totalAmount:amount,
      retailerName:profile.name,
      retailerMobile:profile.mobile,
-     retailerAddress:profile.address,
-     description:selectedProduct.detail
+     retailerAddress:profile.address
     })
    });
-   alert("Payment Success & Order Placed");
+   localStorage.removeItem("cart");
+   cart=[];
+   alert("Order placed");
    closeAll();
   }
- });
- rzp.open();
-}
-
-/* ORDERS */
-async function openOrders(){
- ordersModal.style.display="flex";
- const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- const res=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
- const data=await res.json();
-
- myOrders.innerHTML=data.orders.map(o=>{
-  const d=new Date(o.createdAt);
-  return `
-   <div class="order-card">
-    <b>${o.productName}</b><br>
-    Date: ${d.toLocaleDateString("en-IN")}<br>
-    Time: ${d.toLocaleTimeString("en-IN")}<br>
-    <small>${o.description||""}</small><br>
-    Status: <span class="badge">${o.status}</span>
-   </div>
-  `;
- }).join("");
-}
-
-/* DELIVERY DETAILS */
-async function openDeliveryDetails(){
- deliveryModal.style.display="flex";
- const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- const res=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
- const data=await res.json();
-
- deliveryData.innerHTML=data.orders.filter(o=>o.deliveryBoyName).map(o=>{
-  const d=new Date(o.createdAt);
-  return `
-   <div class="order-card">
-    <b>${o.productName}</b><br>
-    Date: ${d.toLocaleDateString("en-IN")}<br>
-    Time: ${d.toLocaleTimeString("en-IN")}<br>
-    ${o.description||""}<br><br>
-    Boy: ${o.deliveryBoyName}<br>
-    Mobile: ${o.deliveryBoyMobile}<br>
-    Code: <b style="color:green">${o.deliveryCode}</b>
-   </div>
-  `;
- }).join("") || "No delivery yet";
+ }).open();
 }
 
 /* PROFILE */
@@ -255,17 +221,47 @@ function saveProfile(){
  closeAll();
 }
 
-/* NOTIFY DOT */
-async function checkDeliveryNotify(){
+/* ORDERS */
+async function openOrders(){
+ ordersModal.style.display="flex";
+ const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const r=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
+ const d=await r.json();
+ myOrders.innerHTML=d.orders.map(o=>`
+  <div class="order-card">
+   <b>${o.productName||"Cart Order"}</b><br>
+   ₹${o.totalAmount}<br>
+   <span class="badge">${o.status}</span>
+  </div>`).join("");
+}
+
+/* DELIVERY */
+async function openDeliveryDetails(){
+ deliveryModal.style.display="flex";
+ const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const r=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
+ const d=await r.json();
+ deliveryData.innerHTML=d.orders.filter(o=>o.deliveryBoyName).map(o=>`
+  <div class="order-card">
+   ${o.productName}<br>
+   Boy: ${o.deliveryBoyName}<br>
+   Mobile: ${o.deliveryBoyMobile}<br>
+   Code: <b>${o.deliveryCode}</b>
+  </div>`).join("")||"No delivery yet";
+}
+
+/* NOTIFY */
+setInterval(async ()=>{
  const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
  if(!p.mobile) return;
- const res=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
- const data=await res.json();
- deliveryDot.style.display=data.orders.some(o=>o.deliveryBoyName)?"block":"none";
-}
-setInterval(checkDeliveryNotify,8000);
+ const r=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
+ const d=await r.json();
+ deliveryDot.style.display=d.orders.some(o=>o.deliveryBoyName)?"block":"none";
+},8000);
 
-function closeAll(){document.querySelectorAll(".modal").forEach(m=>m.style.display="none")}
+function closeAll(){
+ document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+}
 </script>
 </body>
 </html>
